--- a/front-end/src/Home/Home.css
+++ b/front-end/src/Home/Home.css
@@ -34,3 +34,9 @@
     border-radius: 10px;
     padding: 2%;
 }
+
+@media (max-width: 500px) {
+    .Home > h1 {
+        margin-left: auto;
+    }
+}
